feat(#149): get()