@@ -26,6 +26,7 @@ package org.eolang.lints.critical;
 import com.jcabi.xml.XML;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.LinkedList;
 import org.cactoos.io.ResourceOf;
@@ -61,7 +62,7 @@ public final class LtIncorrectAlias implements Lint<XML> {
                 continue;
             }
             final String pointer = alias.xpath("text()").get(0);
-            final Path candidate = Path.of(
+            final Path candidate = Paths.get(
                 this.base.toUri().getPath(),
                 xmir.xpath("//meta[head='package']/tail/text()").get(0),
                 String.format("%s.xmir", pointer)
